--- a/templates/_index.html
+++ b/templates/_index.html
@@ -12,12 +12,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
         <link rel="stylesheet" href="bower_components/reveal.js/css/reveal.css">
-    
+
         <link rel="stylesheet" href="bower_components/reveal.js/css/theme/black.css" id="theme">
-    
+
 
         <!-- For syntax highlighting -->
-        <link rel="stylesheet" href="bower_components/highlightjs/styles/zenburn.css">
+        <link rel="stylesheet" href="bower_components/highlightjs/styles/solarized_dark.css">
 
         <!-- Printing and PDF exports -->
         <script>
@@ -31,6 +31,12 @@
         <!--[if lt IE 9]>
         <script src="bower_components/reveal.js/lib/js/html5shiv.js"></script>
         <![endif]-->
+
+        <style>
+            html {
+                background-color: inherit;
+            }
+        </style>
     </head>
 
     <body>
@@ -66,6 +72,7 @@
             progress: true,
             history: true,
             center: true,
+            slideNumber: true,
 
             transition: 'slide', // none/fade/slide/convex/concave/zoom
 
