--- a/templates/_index.html
+++ b/templates/_index.html
@@ -36,10 +36,33 @@
             html {
                 background-color: inherit;
             }
+
+            #top-brand {
+                background-color: #a33f1f;
+                width: 100%;
+                height: 2%;
+                position: fixed;
+                top: 0;
+                left: 0;
+            }
+
+            #triangle-bottomleft {
+                position: fixed;
+                bottom: 0;
+                left: 0;
+                width: 0;
+                height: 0;
+                border-bottom: 80px solid #a33f1f;
+                border-right: 80px solid transparent;
+            }
+
         </style>
     </head>
 
     <body>
+
+        <div id="triangle-bottomleft"></div>
+        <div id="top-brand"></div>
 
         <div class="reveal">
 
