--- a/templates/_index.html
+++ b/templates/_index.html
@@ -77,14 +77,33 @@
                 box-shadow: 0 0 0 transparent !important;
             }
 
+            #isep {
+                position: fixed;
+                top: 0;
+                left: 0;
+            }
+
+            #title {
+                position: fixed;
+                bottom: 24px;
+                width: 100%;
+                text-align: center;
+                color: #42affa;
+                font-size: 24px;
+                font-family: 'Source Sans Pro', Helvetica, sans-serif;
+            }
+
         </style>
     </head>
 
     <body>
 
-        <div id="triangle-topleft"></div>
+        <img id="isep" width="100" height="100" src="resources/img/isep.png" alt="">
+        <!--<div id="triangle-topleft"></div>-->
         <div id="triangle-topright"></div>
         <div id="top-brand"></div>
+
+        <div id="title">A framework for real time MMO game content generation</div>
 
         <div class="reveal">
 
