remove isep references

--- a/templates/_index.html
+++ b/templates/_index.html
@@ -97,13 +97,9 @@
     </head>
 
     <body>
-
-        <img id="isep" width="100" height="100" src="resources/img/isep.png" alt="">
-        <!--<div id="triangle-topleft"></div>-->
-        <div id="triangle-topright"></div>
         <div id="top-brand"></div>
 
-        <div id="title">A framework for real time MMO game content generation</div>
+        <div id="title">A Framework for Massively Multiplayer Online Game Content Generation</div>
 
         <div class="reveal">
 
